src/NginxDotnetParser/Antlr4/NginxParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from ./Nginx.g4 by ANTLR 4.13.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace NginxDotnetParser {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.2")]
[System.CLSCompliant(false)]
public partial class NginxParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, Value=15, STR_EXT=16, 
		Comment=17, REGEXP_PREFIXED=18, QUOTED_STRING=19, SINGLE_QUOTED=20, WS=21;
	public const int
		RULE_config = 0, RULE_statement = 1, RULE_genericStatement = 2, RULE_regexHeaderStatement = 3, 
		RULE_block = 4, RULE_genericBlockHeader = 5, RULE_if_statement = 6, RULE_if_body = 7, 
		RULE_regexp = 8, RULE_locationBlockHeader = 9, RULE_rewriteStatement = 10;
	public static readonly string[] ruleNames = {
		"config", "statement", "genericStatement", "regexHeaderStatement", "block", 
		"genericBlockHeader", "if_statement", "if_body", "regexp", "locationBlockHeader", 
		"rewriteStatement"
	};

	private static readonly string[] _LiteralNames = {
		null, "';'", "'{'", "'}'", "'if'", "'('", "')'", "'\\.'", "'^'", "'location'", 
		"'rewrite'", "'last'", "'break'", "'redirect'", "'permanent'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, "Value", "STR_EXT", "Comment", "REGEXP_PREFIXED", "QUOTED_STRING", 
		"SINGLE_QUOTED", "WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Nginx.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static NginxParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public NginxParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public NginxParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ConfigContext : ParserRuleContext {
		public NgxConfig ret;
		public StatementContext _statement;
		public BlockContext _block;
		public IToken _Comment;
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext[] statement() {
			return GetRuleContexts<StatementContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public BlockContext[] block() {
			return GetRuleContexts<BlockContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public BlockContext block(int i) {
			return GetRuleContext<BlockContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] Comment() { return GetTokens(NginxParser.Comment); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Comment(int i) {
			return GetToken(NginxParser.Comment, i);
		}
		public ConfigContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_config; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			INginxListener typedListener = listener as INginxListener;
			if (typedListener != null) typedListener.EnterConfig(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			INginxListener typedListener = listener as INginxListener;
			if (typedListener != null) typedListener.ExitConfig(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			INginxVisitor<TResult> typedVisitor = visitor as INginxVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitConfig(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ConfigContext config() {
		ConfigContext _localctx = new ConfigContext(Context, State);
		EnterRule(_localctx, 0, RULE_config);
		 _localctx.ret =  new NgxConfig(); 
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 30;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				State = 30;
				ErrorHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(TokenStream,0,Context) ) {
				case 1:
					{
					State = 22;
					_localctx._statement = statement();
					 _localctx.ret.AddEntry(_localctx._statement.ret); 
					}
					break;
				case 2:
					{
					State = 25;
					_localctx._block = block();
					 _localctx.ret.AddEntry(_localctx._block.ret); 
					}
					break;
				case 3:
					{
					State = 28;
					_localctx._Comment = Match(Comment);
					 _localctx.ret.AddEntry(new NgxComment((_localctx._Comment!=null?_localctx._Comment.Text:null))); 
					}
					break;
				}
				}
				State = 32;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 427520L) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatementContext : ParserRuleContext {
		public NgxParam ret;
		public RewriteStatementContext _rewriteStatement;
		public GenericStatementContext _genericStatement;
		public RegexHeaderStatementContext _regexHeaderStatement;
		[System.Diagnostics.DebuggerNonUserCode] public RewriteStatementContext rewriteStatement() {
			return GetRuleContext<RewriteStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public GenericStatementContext genericStatement() {
			return GetRuleContext<GenericStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public RegexHeaderStatementContext regexHeaderStatement() {
			return GetRuleContext<RegexHeaderStatementContext>(0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			INginxListener typedListener = listener as INginxListener;
			if (typedListener != null) typedListener.EnterStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			INginxListener typedListener = listener as INginxListener;
			if (typedListener != null) typedListener.ExitStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			INginxVisitor<TResult> typedVisitor = visitor as INginxVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatementContext statement() {
		StatementContext _localctx = new StatementContext(Context, State);
		EnterRule(_localctx, 2, RULE_statement);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 43;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__9:
				{
				State = 34;
				_localctx._rewriteStatement = rewriteStatement();
				 _localctx.ret =  _localctx._rewriteStatement.ret; 
				}
				break;
			case Value:
				{
				State = 37;
				_localctx._genericStatement = genericStatement();
				 _localctx.ret =  _localctx._genericStatement.ret; 
				}
				break;
			case REGEXP_PREFIXED:
				{
				State = 40;
				_localctx._regexHeaderStatement = regexHeaderStatement();
				 _localctx.ret =  _localctx._regexHeaderStatement.ret; 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			State = 45;
			Match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class GenericStatementContext : ParserRuleContext {
		public NgxParam ret;
		public IToken _Value;
		public RegexpContext r;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] Value() { return GetTokens(NginxParser.Value); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Value(int i) {
			return GetToken(NginxParser.Value, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public RegexpContext[] regexp() {
			return GetRuleContexts<RegexpContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public RegexpContext regexp(int i) {
			return GetRuleContext<RegexpContext>(i);
		}
		public GenericStatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_genericStatement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			INginxListener typedListener = listener as INginxListener;
			if (typedListener != null) typedListener.EnterGenericStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			INginxListener typedListener = listener as INginxListener;
			if (typedListener != null) typedListener.ExitGenericStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			INginxVisitor<TResult> typedVisitor = visitor as INginxVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitGenericStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public GenericStatementContext genericStatement() {
		GenericStatementContext _localctx = new GenericStatementContext(Context, State);
		EnterRule(_localctx, 4, RULE_genericStatement);
		 _localctx.ret =  new NgxParam(); 
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 47;
			_localctx._Value = Match(Value);
			 _localctx.ret.AddValue((_localctx._Value!=null?_localctx._Value.Text:null)); 
			State = 56;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 33184L) != 0)) {
				{
				State = 54;
				ErrorHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(TokenStream,3,Context) ) {
				case 1:
					{
					State = 49;
					_localctx._Value = Match(Value);
					 _localctx.ret.AddValue((_localctx._Value!=null?_localctx._Value.Text:null)); 
					}
					break;
				case 2:
					{
					State = 51;
					_localctx.r = regexp();
					 _localctx.ret.AddValue(_localctx.r.ret); 
					}
					break;
				}
				}
				State = 58;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class RegexHeaderStatementContext : ParserRuleContext {
		public NgxParam ret;
		public IToken _REGEXP_PREFIXED;
		public IToken _Value;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode REGEXP_PREFIXED() { return GetToken(NginxParser.REGEXP_PREFIXED, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Value() { return GetToken(NginxParser.Value, 0); }
		public RegexHeaderStatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_regexHeaderStatement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			INginxListener typedListener = listener as INginxListener;
			if (typedListener != null) typedListener.EnterRegexHeaderStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			INginxListener typedListener = listener as INginxListener;
			if (typedListener != null) typedListener.ExitRegexHeaderStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			INginxVisitor<TResult> typedVisitor = visitor as INginxVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRegexHeaderStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public RegexHeaderStatementContext regexHeaderStatement() {
		RegexHeaderStatementContext _localctx = new RegexHeaderStatementContext(Context, State);
		EnterRule(_localctx, 6, RULE_regexHeaderStatement);
		 _localctx.ret =  new NgxParam(); 
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 59;
			_localctx._REGEXP_PREFIXED = Match(REGEXP_PREFIXED);
			 _localctx.ret.AddValue((_localctx._REGEXP_PREFIXED!=null?_localctx._REGEXP_PREFIXED.Text:null)); 
			State = 61;
			_localctx._Value = Match(Value);
			 _localctx.ret.AddValue((_localctx._Value!=null?_localctx._Value.Text:null)); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BlockContext : ParserRuleContext {
		public NgxBlock ret;
		public LocationBlockHeaderContext _locationBlockHeader;
		public GenericBlockHeaderContext _genericBlockHeader;
		public IToken _Comment;
		public StatementContext _statement;
		public BlockContext b;
		public If_statementContext _if_statement;
		[System.Diagnostics.DebuggerNonUserCode] public LocationBlockHeaderContext locationBlockHeader() {
			return GetRuleContext<LocationBlockHeaderContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public GenericBlockHeaderContext genericBlockHeader() {
			return GetRuleContext<GenericBlockHeaderContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] Comment() { return GetTokens(NginxParser.Comment); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Comment(int i) {
			return GetToken(NginxParser.Comment, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext[] statement() {
			return GetRuleContexts<StatementContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public If_statementContext[] if_statement() {
			return GetRuleContexts<If_statementContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public If_statementContext if_statement(int i) {
			return GetRuleContext<If_statementContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public BlockContext[] block() {
			return GetRuleContexts<BlockContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public BlockContext block(int i) {
			return GetRuleContext<BlockContext>(i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_block; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			INginxListener typedListener = listener as INginxListener;
			if (typedListener != null) typedListener.EnterBlock(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			INginxListener typedListener = listener as INginxListener;
			if (typedListener != null) typedListener.ExitBlock(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			INginxVisitor<TResult> typedVisitor = visitor as INginxVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBlock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BlockContext block() {
		BlockContext _localctx = new BlockContext(Context, State);
		EnterRule(_localctx, 8, RULE_block);
		 _localctx.ret =  new NgxBlock(); 
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 70;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__8:
				{
				State = 64;
				_localctx._locationBlockHeader = locationBlockHeader();
				 _localctx.ret.GetTokens().AddRange(_localctx._locationBlockHeader.ret); 
				}
				break;
			case Value:
				{
				State = 67;
				_localctx._genericBlockHeader = genericBlockHeader();
				 _localctx.ret.GetTokens().AddRange(_localctx._genericBlockHeader.ret); 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			State = 73;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==Comment) {
				{
				State = 72;
				_localctx._Comment = Match(Comment);
				}
			}

			State = 75;
			Match(T__1);
			State = 89;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 427536L) != 0)) {
				{
				State = 87;
				ErrorHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(TokenStream,7,Context) ) {
				case 1:
					{
					State = 76;
					_localctx._statement = statement();
					 _localctx.ret.AddEntry(_localctx._statement.ret); 
					}
					break;
				case 2:
					{
					State = 79;
					_localctx.b = block();
					 _localctx.ret.AddEntry(_localctx.b.ret); 
					}
					break;
				case 3:
					{
					State = 82;
					_localctx._if_statement = if_statement();
					 _localctx.ret.AddEntry(_localctx._if_statement.ret); 
					}
					break;
				case 4:
					{
					State = 85;
					_localctx._Comment = Match(Comment);
					 _localctx.ret.AddEntry(new NgxComment((_localctx._Comment!=null?_localctx._Comment.Text:null))); 
					}
					break;
				}
				}
				State = 91;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 92;
			Match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class GenericBlockHeaderContext : ParserRuleContext {
		public List<NgxToken> ret;
		public IToken _Value;
		public RegexpContext _regexp;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] Value() { return GetTokens(NginxParser.Value); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Value(int i) {
			return GetToken(NginxParser.Value, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public RegexpContext[] regexp() {
			return GetRuleContexts<RegexpContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public RegexpContext regexp(int i) {
			return GetRuleContext<RegexpContext>(i);
		}
		public GenericBlockHeaderContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_genericBlockHeader; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			INginxListener typedListener = listener as INginxListener;
			if (typedListener != null) typedListener.EnterGenericBlockHeader(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			INginxListener typedListener = listener as INginxListener;
			if (typedListener != null) typedListener.ExitGenericBlockHeader(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			INginxVisitor<TResult> typedVisitor = visitor as INginxVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitGenericBlockHeader(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public GenericBlockHeaderContext genericBlockHeader() {
		GenericBlockHeaderContext _localctx = new GenericBlockHeaderContext(Context, State);
		EnterRule(_localctx, 10, RULE_genericBlockHeader);
		 _localctx.ret =  new ArrayList<NgxToken>(); 
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 94;
			_localctx._Value = Match(Value);
			 _localctx.ret.Add(new NgxToken((_localctx._Value!=null?_localctx._Value.Text:null))); 
			State = 103;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 33184L) != 0)) {
				{
				State = 101;
				ErrorHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(TokenStream,9,Context) ) {
				case 1:
					{
					State = 96;
					_localctx._Value = Match(Value);
					 _localctx.ret.Add(new NgxToken((_localctx._Value!=null?_localctx._Value.Text:null))); 
					}
					break;
				case 2:
					{
					State = 98;
					_localctx._regexp = regexp();
					 _localctx.ret.Add(new NgxToken(_localctx._regexp.ret)); 
					}
					break;
				}
				}
				State = 105;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class If_statementContext : ParserRuleContext {
		public NgxIfBlock ret;
		public IToken id;
		public If_bodyContext _if_body;
		public StatementContext _statement;
		[System.Diagnostics.DebuggerNonUserCode] public If_bodyContext if_body() {
			return GetRuleContext<If_bodyContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Comment() { return GetToken(NginxParser.Comment, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext[] statement() {
			return GetRuleContexts<StatementContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		public If_statementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_if_statement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			INginxListener typedListener = listener as INginxListener;
			if (typedListener != null) typedListener.EnterIf_statement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			INginxListener typedListener = listener as INginxListener;
			if (typedListener != null) typedListener.ExitIf_statement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			INginxVisitor<TResult> typedVisitor = visitor as INginxVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIf_statement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public If_statementContext if_statement() {
		If_statementContext _localctx = new If_statementContext(Context, State);
		EnterRule(_localctx, 12, RULE_if_statement);
		 _localctx.ret =  new NgxIfBlock(); 
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 106;
			_localctx.id = Match(T__3);
			 _localctx.ret.AddValue(new NgxToken((_localctx.id!=null?_localctx.id.Text:null))); 
			State = 108;
			_localctx._if_body = if_body();
			 _localctx.ret.GetTokens().AddRange(_localctx._if_body.ret); 
			State = 111;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==Comment) {
				{
				State = 110;
				Match(Comment);
				}
			}

			State = 113;
			Match(T__1);
			State = 119;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 295936L) != 0)) {
				{
				{
				State = 114;
				_localctx._statement = statement();
				 _localctx.ret.AddEntry(_localctx._statement.ret); 
				}
				}
				State = 121;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 122;
			Match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class If_bodyContext : ParserRuleContext {
		public List<NgxToken> ret;
		public IToken _Value;
		public RegexpContext _regexp;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] Value() { return GetTokens(NginxParser.Value); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Value(int i) {
			return GetToken(NginxParser.Value, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public RegexpContext regexp() {
			return GetRuleContext<RegexpContext>(0);
		}
		public If_bodyContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_if_body; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			INginxListener typedListener = listener as INginxListener;
			if (typedListener != null) typedListener.EnterIf_body(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			INginxListener typedListener = listener as INginxListener;
			if (typedListener != null) typedListener.ExitIf_body(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			INginxVisitor<TResult> typedVisitor = visitor as INginxVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIf_body(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public If_bodyContext if_body() {
